--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.10.3",
     "@strapi/plugin-users-permissions": "5.10.3",
+    "@strapi/provider-upload-cloudinary": "^5.10.3",
     "@strapi/strapi": "5.10.3",
     "fs-extra": "^10.0.0",
     "mime-types": "^2.1.27",
-    "pg": "8.8.0",
+    "pg": "^8.13.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
